# nuremics

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  MANIFEST.in  README.md  pixi.toml  pyproject.toml  requirements.txt
nuremics/core/: __init__.py  application.py  process.py  utils.py  workflow.py
nuremics/resources/: logo.txt
src/nuremics/: __init__.py
src/nuremics/core/: __init__.py  application.py  process.py  utils.py  workflow.py
tests/: conftest.py  test_application.py
