[project]
name = "nuremics"
version = "1.0.0"
description = "nuRemics is an open-source Python framework for building software-grade scientific tools."
authors = [
  { name = "Julien SIGUENZA", email = "contact@julien-siguenza.com" },
]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = [
  "LICENSE",
  "LICENSE_TRADEMARK",
]
requires-python = ">=3.9"
dependencies = [
  "attrs>=22.1.0",
  "pandas>=2.1.1",
  "numpy>=1.26.0",
  "termcolor>=1.1.0",
  "platformdirs>=3.5",
]

[project.urls]
"Homepage" = "https://github.com/nuremics/nuremics"

[dependency-groups]
dev = [
  "pre-commit>=4.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"nuremics.resources" = [
  "*.png",
  "*.txt",
]

[tool.setuptools.packages.find]
where = ["src"]